alterações de nomes de arquivos

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -4,15 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<title>Tina makeup</title>
+
+
 </head>
 <body class="body">
 
     <header>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="serviços.html">Serviços</a>
-        <a href="portifólio.html">Portifólio</a>
-        <a href="contato.html">Contato</a>			
+        <a href="portifolio.html">Portifólio</a>
+        <a href="#">Contato</a>			
     </header>
 
                  <!--Abrindo seção-->
